--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
     <link rel="icon" href="img/box.png">
-    <title>Gift</title>
+    <title>Gift for love</title>
 </head>
 <body>
     <div class="wrapper">
